--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "ts-debounce": "^2.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
